Fix spacing of textarea.i-has-action

--- a/indico/htdocs/sass/partials/_inputs.scss
+++ b/indico/htdocs/sass/partials/_inputs.scss
@@ -348,7 +348,7 @@ $dropdown-transition: $dropdown-transition-step ease-out;
         height: 2.5em;
         line-height: 1.2em;
         margin: 0;
-        padding: 0 0.8em;
+        padding: 0.5em 1em;
     }
 
     > textarea {
